# calibre-mcp

./: LICENSE  README.md  calibre_mcp.py  pyproject.toml
